Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22415

Creator fails to remember the sizes of the panels in debug mode

XMLWordPrintable

    • 4323da700ad31f11031d56969358e0dde9357f04 (qt-creator/qt-creator/4.10)

      This happens to me on Linux (X11), using Qt 5.13 (5.13 branch), HiDPI (geometry appears to be 3840x2028+3200+61).

      1. Start debugging
      2. Change the size of the panels at the bottom (make them taller, move the middle divider, etc.)
      3. Stop debugging
      4. Start debugging again

      Expected:
      The layout should be exactly what it was before debugging was stopped

      Actual results:
      The layout resets: the panels are not tall enough and the divider is far to the right.

      Note how when debugging is stopped, the divider already moves to the right. It appears the layout is reset to the minimum width for the columns on the right side, which is insufficient to read the content there when the program does stop.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            thiago Thiago Macieira
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes